--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 24 17:48:18 CEST 2021
-sdk.dir=C\:\\Users\\Gallvanos\\AppData\\Local\\Android\\Sdk
+#Tue Oct 26 16:31:43 CEST 2021
+sdk.dir=C\:\\Users\\andre\\AppData\\Local\\Android\\Sdk
