--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 26 16:31:43 CEST 2021
-sdk.dir=C\:\\Users\\andre\\AppData\\Local\\Android\\Sdk
+#Thu Oct 28 19:07:35 CEST 2021
+sdk.dir=C\:\\software\\programacion\\Android\\android-sdk
