cambiando el proyecto de logica para dejarlo todo en el mismo sitio

--- a/0hn0depalo/DesktopLauncher/build.gradle
+++ b/0hn0depalo/DesktopLauncher/build.gradle
@@ -8,7 +8,7 @@ java {
 }
 
 dependencies {
-    implementation project(path: ':0hn0')
     implementation project(path: ':Engine')
     implementation project(path: ':DesktopEngine')
+    implementation project(path: ':OhnO')
 }
