--- a/0hn0depalo/androidlauncher/build.gradle
+++ b/0hn0depalo/androidlauncher/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation project(path: ':AndroidEngine')
-    implementation project(path: ':0hn0')
     implementation project(path: ':Engine')
+    implementation project(path: ':OhnO')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
