--- a/0hn0depalo/settings.gradle
+++ b/0hn0depalo/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = "0h n0 de palo"
 include ':Engine'
 include ':AndroidEngine'
-include ':0hn0'
 include ':DesktopEngine'
 include ':DesktopLauncher'
 include ':Androidlauncher'
+include ':OhnO'
