--- a/0hn0depalo/AndroidLauncher/build.gradle
+++ b/0hn0depalo/AndroidLauncher/build.gradle
@@ -32,6 +32,21 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        // add the code from below line
+        applicationVariants.all{
+            // this method is use to rename your all apk weather
+            // it may be signed or unsigned(debug apk)
+            variant ->
+                variant.outputs.each{
+                    // on below line we are setting
+                    
+                    output->
+                        
+                        // outputFile Name to our apk file
+                        output.outputFileName = "Oh-nO.apk"
+                }
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
